# barber-checker

./: Cargo.toml
src/: barber.rs  main.rs
